[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -261.0
margin_bottom = 602.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1002.66
margin_top = -541.018
margin_right = -337.661
margin_bottom = -235.018
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="."]
margin_right = 320.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFolder" type="Button" parent="Menu"]
margin_right = 47.0
margin_bottom = 30.0
text = "Open"

[node name="Path" type="Label" parent="Menu"]
margin_left = 51.0
margin_top = 8.0
margin_right = 51.0
margin_bottom = 22.0

[node name="PlayMenu" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -205.0
margin_top = -121.0
margin_right = -9.0
margin_bottom = -81.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play&Pause" type="Button" parent="PlayMenu"]
margin_right = 20.0
margin_bottom = 40.0
toggle_mode = true
text = ">"

[node name="Loop" type="CheckButton" parent="PlayMenu"]
margin_left = 24.0
margin_right = 135.0
margin_bottom = 40.0
text = "Loop"

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 175.0
margin_top = 378.0
margin_right = 631.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progress" type="HSlider" parent="."]
margin_left = 162.336
margin_top = 403.601
margin_right = 643.336
margin_bottom = 419.601
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressLabel" type="Label" parent="."]
margin_left = 446.213
margin_top = 491.552
margin_right = 446.213
margin_bottom = 505.552
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volume" type="VSlider" parent="."]
margin_left = 698.0
margin_top = 7.0
margin_right = 742.0
margin_bottom = 588.0
min_value = -80.0
max_value = 20.0
tick_count = 20
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
window_title = "Load Path"
resizable = true
mode = 2
access = 2
current_dir = "/Ascii/NixAudioManager"
current_path = "/Ascii/NixAudioManager/"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="Menu/OpenFolder" to="." method="_on_OpenFolder_pressed"]
[connection signal="toggled" from="PlayMenu/Loop" to="." method="_on_Loop_toggled"]
[connection signal="value_changed" from="progress" to="." method="_on_progress_value_changed"]
[connection signal="value_changed" from="volume" to="." method="_on_volume_value_changed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
